kind/manifests/documents/dashboard-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-client
  namespace: documents
  labels:
    app: dashboard-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-client
  template:
    metadata:
      labels:
        app: dashboard-client
      annotations:
        sidecar.istio.io/proxyCPU: "10m"
        sidecar.istio.io/proxyMemory: "64Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"
    spec:
      containers:
      - name: dashboard-client
        image: workspace/dashboard-client:dev
        imagePullPolicy: IfNotPresent
        resources:
          requests: { cpu: 5m, memory: 16Mi }
          limits:   { cpu: 50m, memory: 32Mi }
