kind/manifests/documents/documents-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documents-api
  namespace: documents
  labels:
    app: documents-api
spec:
  type: ClusterIP
  selector:
    app: documents-api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
