kind/manifests/documents/pcs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pcs
  namespace: documents
  labels:
    app: pcs
spec:
  type: ClusterIP
  selector:
    app: pcs
  ports:
  - name: http
    port: 8080
    targetPort: 8080
