kind/manifests/documents/documents-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: documents-gateway
  namespace: documents
spec:
  selector:
    istio: documents-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - documents.local
