kind/manifests/documents/documents-ext-authz.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: documents-ext-authz
  namespace: documents
spec:
  workloadSelector:
    labels:
      workspace.io/ext-authz: enabled
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_authz
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          transport_api_version: V3
          http_service:
            server_uri:
              uri: http://pcs.documents.svc.cluster.local:8080
              cluster: outbound|8080||pcs.documents.svc.cluster.local
              timeout: 1s
            path_prefix: /check
            authorization_request:
              allowed_headers:
                patterns:
                - exact: x-workspace-user-id
                - exact: authorization
          failure_mode_allow: false
